# pubky-noise

./: .cursorrules  .gitignore  BUILD.md  CHANGELOG.md  COMPREHENSIVE_REVIEW.md  Cargo.toml  DELIVERY_REPORT.md  DEMO_APPS_REVIEW.md  DEV_ENVIRONMENT_SETUP.md  FFI_CHANGELOG.md  FIXES_APPLIED.md  PRODUCTION_AUDIT_REPORT.md  PRODUCTION_READINESS_REPORT.md  PR_DESCRIPTION.md  PUBKY_NOISE_AUDIT_REPORT.md  README.md  REVIEW_SUMMARY.md  THREAT_MODEL.md  build-android.sh  build-ios.sh  build.rs  gemini-review.md  gpt51high-review.md  master-review.md  opus-review.md  sonnet-max-review.md  test-audit.plan.md  uniffi.toml
.cargo/: README.md  config.toml
.cursor/plans/: audit-remediation-2026-01-04-2.plan.md  crypto_spec_update_final_85ee4909.plan.md
.github/workflows/: ffi-build-android.yml  ffi-build-ios.yml  ffi-release.yml
archive/: README.md
archive-2026-01-09/session-summaries/: session-2026-01-09-ios-background-lightning-plan-audit.md
archive/historical-reports/: COMPARISON_REPORT_PUBKY_DATA.md  FFI_EXPERT_REVIEW.md  FFI_IMPLEMENTATION_SUMMARY.md
docs/: ANDROID_INTEGRATION.md  BITKIT_INTEGRATION_CHECKLIST.md  COLD_KEY_ARCHITECTURE.md  DOWNSTREAM_INTEGRATION_REPORT.md  FFI_FIXES_APPLIED.md  FFI_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  IOS_INTEGRATION.md  MIGRATION_GUIDE_1.1.md  MOBILE_INTEGRATION.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_ENHANCEMENTS_SUMMARY.md  PUBKY_CRYPTO_SPEC.md  README.md  TEST_AND_LOGGING_REPORT.md
docs/archive/: FFI_EXPERT_REVIEW.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md
examples/: README.md  basic_handshake.rs  error_handling.rs  mobile_manager.rs  server_example.rs  storage_queue.rs  streaming.rs  xx_pattern.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: README.md  fuzz_handshake.rs  fuzz_identity_payload.rs  fuzz_kdf.rs  fuzz_nn_handshake.rs  fuzz_noise_link.rs  fuzz_xx_handshake.rs
generated-kotlin/: README.md
generated-kotlin/com/: README.md
generated-kotlin/com/pubky/: README.md
generated-kotlin/com/pubky/noise/: README.md  pubky_noise.kt
generated-kotlin/uniffi/pubky_noise/: pubky_noise.kt
generated-kotlin/uniffi/uniffi/pubky_noise/: pubky_noise.kt
generated-swift/: README.md  pubky_noise.swift  pubky_noiseFFI.h
pubky-noise-antoines-standards-plus/: Cargo.toml  README.md
pubky-noise-antoines-standards-plus/src/: client.rs  datalink_adapter.rs  kdf.rs  transport.rs
pubky-noise-antoines-standards-plus/tests/: adapter_demo.rs
session-summaries/: session-2026-01-05-123300-paykit-subscriptions-e2e.md  session-2026-01-08-150627-audit-remediation-contextid-docs.md  session-2026-01-14-081402-pubky-locks-sync-script-and-cursor-ui-issue.md  session-2026-01-20-135405-pubky-ring-ukd-rn-bridge.md  session-2026-01-20-135438-unified-crypto-specs.md  session-2026-01-20-143709-non-migration-cleanups-and-sync.md  session-2026-01-21-000146-bitkit-android-paykit-audit-plan-check.md
src/: README.md  client.rs  datalink_adapter.rs  errors.rs  handshake_queue.rs  identity_payload.rs  kdf.rs  lib.rs  mobile_manager.rs  pkarr.rs  pkarr_helpers.rs  prelude.rs  pubky_noise.udl  pubky_ring.rs  rate_limiter.rs  receiver.rs  ring.rs  sealed_blob.rs  sealed_blob_v2.rs  secure_mem.rs  sender.rs  server.rs  session_id.rs  session_manager.rs  storage_queue.rs  streaming.rs  tests.rs  transport.rs  ukd.rs
src/ffi/: README.md  config.rs  errors.rs  manager.rs  mod.rs  pkarr.rs  raw_manager.rs  types.rs
tests/: README.md  adapter_demo.rs  cold_key_patterns.rs  envelope_vectors.rs  ffi_comprehensive.rs  ffi_integration.rs  ffi_raw_manager.rs  ffi_smoke.rs  identity_payload.rs  identity_payload_tests.rs  invalid_peer.rs  kdf_tests.rs  loom_tests.rs  mobile_integration.rs  mobile_integration_note.md  network_partition.rs  nn_pattern.rs  property_tests.rs  replay_protection.rs  sealed_blob_tamper.rs  sender_receiver.rs  server_policy.rs  session_id.rs  storage_queue.rs  storage_queue_comprehensive.rs  timeout_and_validation.rs  x25519_vectors.rs  xx_interop.rs  xx_pattern.rs  xx_pattern_full.rs
tests/fixtures/: test_vectors.json
