[package]
name = "pubky-noise"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Production-ready Noise Protocol implementation for Pubky with mobile-optimized lifecycle management, thread safety, and network resilience."
readme = "README.md"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
pkarr = []
trace = ["tracing"]
secure-mem = ["region"]
pubky-sdk = ["dep:pubky"]
storage-queue = ["dep:pubky", "dep:async-trait"]
uniffi_macros = ["dep:uniffi", "dep:tokio"]

[dependencies]
snow = "0.9"
x25519-dalek = "2"
ed25519-dalek = "2"
curve25519-dalek = "4"
sha2 = "0.10"
blake2 = "0.10"
hkdf = "0.12"
zeroize = "1"
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
thiserror = "1"
cfg-if = "1"
hex = "0.4"
tracing = { version = "0.1", optional = true }
region = { version = "3", optional = true }
pubky = { version = "0.6.0-rc.6", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
uniffi = { version = "0.25", optional = true }

[build-dependencies]
uniffi_build = "0.25"

[dev-dependencies]
rand_core = "0.6"
tokio = { version = "1", features = ["full"] }
uniffi_bindgen = "0.25"
loom = "0.7"
sha2 = "0.10"
rand = "0.8"
