[package]
name = "pubky-noise"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Production-ready Noise Protocol implementation for Pubky with mobile-optimized lifecycle management, thread safety, and network resilience."
readme = "README.md"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
pkarr = []
trace = ["tracing"]
# secure-mem: Reserved for future mlock-based memory protection.
# Currently a no-op; applications should use platform secure storage for keys.
secure-mem = ["region"]
pubky-sdk = ["dep:pubky"]
storage-queue = ["dep:pubky", "dep:async-trait", "dep:tokio"]
uniffi_macros = ["dep:uniffi", "dep:tokio"]
bindgen-cli = ["dep:uniffi_bindgen", "dep:camino", "dep:anyhow"]

[dependencies]
snow = "0.9"
# x25519-dalek: Used indirectly via curve25519-dalek for X25519 operations
x25519-dalek = "2"
ed25519-dalek = "2"
curve25519-dalek = "4"
sha2 = "0.10"
blake2 = "0.10"
hkdf = "0.12"
zeroize = "1"
# Note: secrecy was removed - use zeroize::Zeroizing instead
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
thiserror = "1"
cfg-if = "1"
hex = "0.4"
tracing = { version = "0.1", optional = true }
region = { version = "3", optional = true }
pubky = { git = "https://github.com/BitcoinErrorLog/pubky-core", rev = "290d801", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
uniffi = { version = "0.29.4", optional = true }
uniffi_bindgen = { version = "0.29.4", optional = true }
camino = { version = "1.1", optional = true }
anyhow = { version = "1.0", optional = true }

[build-dependencies]
uniffi_build = "0.29.4"

[dev-dependencies]
rand_core = "0.6"
tokio = { version = "1", features = ["full"] }
loom = "0.7"
sha2 = "0.10"
rand = "0.8"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"
required-features = ["bindgen-cli"]
